Holding down on candidates in the TouchBar should show panel on screen https://bugs.webkit.org/show_bug.cgi?id=166367 -and corresponding- <rdar://problem/28479236>

Reviewed by Tim Horton.

Source/WebCore:

Expose the version of setCandidates: that takes a rect.
* platform/spi/cocoa/NSTouchBarSPI.h:

Source/WebKit/mac:

Stray whitespace.
* WebCoreSupport/WebEditorClient.mm:
(WebEditorClient::handleRequestedCandidates):

Call the version of setCandidates: that takes a rect. We need to keep the helper
function in WK1 (unlike WK2) since we also use it for testing.
* WebView/WebView.mm:
(-[WebView showCandidates:forString:inRect:forSelectedRange:view:completionHandler:]):

Source/WebKit2:

The showCandidates() helper function is not needed. We can call the AppKit method
directly at the one call site.
* UIProcess/Cocoa/WebViewImpl.h:
* UIProcess/Cocoa/WebViewImpl.mm:

The panel should appear under the selection, so offset the selection rect.
(WebKit::WebViewImpl::handleRequestedCandidates):

No more showCandidates() since we can call it directly.
(WebKit::WebViewImpl::showCandidates): Deleted.



Canonical link: https://commits.webkit.org/183688@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210075 268f45cc-cd09-0410-ab3c-d52691b4dbfc